Add step for warning about the bootloader lock status
Change-Id: I50dca8db8c8748843a894a9c0dbcd9d9a90d110b

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -30,4 +30,9 @@
     <string name="euicc_summary">You can also add an eSIM to your device.</string>
     <string name="sim_missing_full_description" translatable="false"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
     <string name="setup_euicc">Setup eSIM</string>
+
+    <!-- Bootloader Lock Status -->
+    <string name="bootloader_warning_title">Bootloader lock warning</string>
+    <string name="bootloader_warning_summary">This device\'s bootloader is currently unlocked. Please lock the bootloader from a computer. Visit <a href="https://calyxos.org/lock">calyxos.org/lock</a> for more info.</string>
+    <string name="reboot">Reboot</string>
 </resources>
