Add step for warning about the bootloader lock status
Change-Id: I50dca8db8c8748843a894a9c0dbcd9d9a90d110b

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -45,4 +45,9 @@
     <string name="oemunlock_na">OEM Unocking: Not Applicable</string>
     <string name="oemunlock_notallowed">OEM Unocking: Not Allowed</string>
     <string name="factory_reset">Factory Reset and Power off</string>
+
+    <!-- Bootloader Lock Status -->
+    <string name="bootloader_warning_title">Bootloader warning</string>
+    <string name="bootloader_warning_summary">This device\'s bootloader is currently unlocked. Please lock the bootloader</string>
+    <string name="reboot">Reboot</string>
 </resources>
