Add step for disallowing OEM unlocking
Change-Id: I739d0808fc5c66656128f755451441de96764a90

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -35,5 +35,9 @@
     <string name="bootloader_warning_title">Bootloader warning</string>
     <string name="bootloader_warning_summary">This device\'s bootloader is currently unlocked. Please lock the bootloader</string>
 
+    <!-- OEM Lock -->
+    <string name="oem_unlock_title">OEM Unlocking</string>
+    <string name="oem_unlock_summary">Allow the bootloader to be unlocked</string>
+
     <string name="reboot">Reboot</string>
 </resources>
