--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -30,4 +30,7 @@
 
     <!-- Backup Restore -->
     <string name="calyx_intro_restore_subtitle">If you have a backup from your last Calyx phone, you can restore it here.</string>
+
+    <!-- eSIM setup -->
+    <string name="setup_euicc">Setup eSIM</string>
 </resources>
