--- a/res/layout/sim_missing_page.xml
+++ b/res/layout/sim_missing_page.xml
@@ -50,6 +50,31 @@
                     android:paddingRight="@dimen/location_text_margin_right"
                     android:text="@string/sim_missing_summary" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/euicc"
+                    style="@style/PageSummaryText"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="@dimen/summary_margin_bottom"
+                    android:paddingRight="@dimen/location_text_margin_right"
+                    android:text="@string/euicc_summary" />
+
+                <Button
+                    android:id="@+id/setup_euicc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/content_margin_left"
+                    android:paddingRight="@dimen/location_text_margin_right"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:background="@color/accent"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="@string/setup_euicc"/>
+
                 <ImageView
                     android:id="@+id/sim_slot_image"
                     android:layout_width="match_parent"
