Add button to setup eSIM on missing SIM page
Change-Id: I61072d392a4eff5e5223782c2bda8c0d3ca45d1f

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -40,4 +40,6 @@
     <string name="oem_unlock_summary">Allow the bootloader to be unlocked</string>
 
     <string name="reboot">Reboot</string>
+
+    <string name="setup_euicc">Setup eSIM</string>
 </resources>
