Add button to setup eSIM on missing SIM page
Change-Id: I61072d392a4eff5e5223782c2bda8c0d3ca45d1f
(cherry picked from commit 8d65f959db099502d601cfe48d046059d9abe74f)

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -42,4 +42,8 @@
     <string name="oemunlock_na" translatable="false">OEM unlocking: Not Applicable</string>
     <string name="oemunlock_notallowed" translatable="false">OEM unlocking: Not Allowed</string>
     <string name="factory_reset" translatable="false">Factory reset and power off</string>
+
+    <!-- eSIM setup -->
+    <string name="euicc_summary">You can also add an eSIM to your device.</string>
+    <string name="setup_euicc">Setup eSIM</string>
 </resources>
