--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -16,4 +16,9 @@
 
     <!-- Toast show on skipping SetupWizard -->
     <string name="skip_setupwizard" translatable="false">Skipping setup wizard</string>
+
+    <!-- eSIM setup -->
+    <string name="euicc_summary">You can also add an eSIM to your device.</string>
+    <string name="sim_missing_full_description" translatable="false"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
+    <string name="setup_euicc">Setup eSIM</string>
 </resources>
