--- a/res/layout/sim_missing_page.xml
+++ b/res/layout/sim_missing_page.xml
@@ -28,32 +28,63 @@
                  android:layout_height="0dp"
                  android:layout_weight="1">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
+        <ScrollView android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/PageContent">
+            android:fillViewport="true">
 
-            <TextView
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/sim_missing"
-                style="@style/PageSummaryText"
-                android:textSize="15sp"
-                android:layout_marginBottom="@dimen/summary_margin_bottom"
-                android:paddingLeft="@dimen/content_margin_left"
-                android:paddingRight="@dimen/content_margin_right"
-                android:text="@string/sim_missing_summary" />
+                android:paddingStart="@dimen/content_margin_left"
+                android:paddingEnd="@dimen/content_margin_left"
+                style="@style/PageContent">
 
-            <ImageView
-                android:id="@+id/sim_slot_image"
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:layout_weight="1"
-                android:scaleType="fitEnd"
-                android:src="@drawable/sim"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sim_missing"
+                    style="@style/PageSummaryText"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="@dimen/summary_margin_bottom"
+                    android:paddingRight="@dimen/location_text_margin_right"
+                    android:text="@string/sim_missing_summary" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/euicc"
+                    style="@style/PageSummaryText"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="@dimen/summary_margin_bottom"
+                    android:paddingRight="@dimen/location_text_margin_right"
+                    android:text="@string/euicc_summary" />
+
+                <Button
+                    android:id="@+id/setup_euicc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/content_margin_left"
+                    android:paddingRight="@dimen/location_text_margin_right"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:background="@color/accent"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="@string/setup_euicc"/>
+
+                <ImageView
+                    android:id="@+id/sim_slot_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="0px"
+                    android:layout_weight="1"
+                    android:scaleType="fitEnd"
+                    android:src="@drawable/sim"/>
 
         </LinearLayout>
+        </ScrollView>
     </FrameLayout>
 
     <com.google.android.setupdesign.view.NavigationBar
