--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -13,4 +13,7 @@
     <string name="microg_defaults_summary">Allow apps to register for push notifications with Google. This registers your device to Google services, without any device-specific unique identifiers. This can be enabled later from microG Settings, however any apps setup earlier will need to be re-installed to work properly.</string>
     <string name="microg_location_switch_label">Network location</string>
     <string name="microg_location_summary">Improve location services by querying MLS (Mozilla Location Services) with nearby Wi-Fi and cellular networks, using Nominatim for address lookups, and remembering GPS coordinates of nearby networks. You can customize these options more granularly in microG Settings later.</string>
+
+    <!-- Toast show on skipping SetupWizard -->
+    <string name="skip_setupwizard" translatable="false">Skipping setup wizard</string>
 </resources>
