--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -23,6 +23,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/root_view"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
