Create managed profile setup flow
Change-Id: I42f8255bea3c7126526430b28c384538fa204c28
(cherry picked from commit 731d5e18da8818328eff983a5676ca40665f5bf1)

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -15,6 +15,10 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Managed profile -->
+    <string name="lineage_wizard_script_managed_profile_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_managed_profile</string>
+
+
     <!-- App install -->
     <string name="calyx_fdroid_repo_location" translatable="false">/product/fdroid/repo</string>
     <string name="install_apps_title">Additional apps</string>
