--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -34,4 +34,7 @@
     <!-- eSIM setup -->
     <string name="euicc_summary">You can also add an eSIM to your device.</string>
     <string name="setup_euicc">Setup eSIM</string>
+
+    <!-- Toast show on skipping Setupwizard -->
+    <string name="skip_setupwizard">Skipping Setupwizard!</string>
 </resources>
