WelcomeActivity: Optionally show additional details
* Long press of brand logo (CalyxOS logo in the middle)
  shows you
  * Bootloader lock status
  * OEM unlocking toggle status
* It also lets you hit a button to factory reset and power off,
  which does exactly what the name implies

Change-Id: I6ec9ec98dffe1be3e7c516b31fa4612edd079add
(cherry picked from commit 5fc74855659ac750a4da9735c65c1663b22f9a8e)

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -30,4 +30,13 @@
 
     <!-- Toast show on skipping SetupWizard -->
     <string name="skip_setupwizard" translatable="false">Skipping setup wizard</string>
+
+    <!-- Welcome: long press Brand Logo
+         No translations because this is shown before locale selection -->
+    <string name="bootloader_unlocked" translatable="false">Bootloader: Unlocked</string>
+    <string name="bootloader_locked" translatable="false">Bootloader: Locked</string>
+    <string name="oemunlock_allowed" translatable="false">OEM Unlocking: Allowed</string>
+    <string name="oemunlock_na" translatable="false">OEM Unlocking: Not Applicable</string>
+    <string name="oemunlock_notallowed" translatable="false">OEM Unlocking: Not Allowed</string>
+    <string name="factory_reset" translatable="false">Factory Reset and Power off</string>
 </resources>
