--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -7,5 +7,9 @@
     <color name="calyx_logo_accent">#FFFFFF</color>
     <color name="microg_logo_accent">#ffffff</color>
 
+    <color name="red">#ff6434</color>
+    <color name="yellow">#ffff52</color>
+    <color name="green">#9cff57</color>
+
     <color name="divider">#40ffffff</color>
 </resources>
