--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -17,6 +17,15 @@
     <!-- Toast show on skipping SetupWizard -->
     <string name="skip_setupwizard" translatable="false">Skipping setup wizard</string>
 
+    <!-- Welcome: long press Brand Logo
+         No translations because this is shown before locale selection -->
+    <string name="bootloader_unlocked" translatable="false">Bootloader: Unlocked</string>
+    <string name="bootloader_locked" translatable="false">Bootloader: Locked</string>
+    <string name="oemunlock_allowed" translatable="false">OEM unlocking: Allowed</string>
+    <string name="oemunlock_na" translatable="false">OEM unlocking: Not Applicable</string>
+    <string name="oemunlock_notallowed" translatable="false">OEM unlocking: Not Allowed</string>
+    <string name="factory_reset" translatable="false">Factory reset and power off</string>
+
     <!-- eSIM setup -->
     <string name="euicc_summary">You can also add an eSIM to your device.</string>
     <string name="sim_missing_full_description" translatable="false"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
