--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -55,6 +55,62 @@
 
         </LinearLayout>
 
+        <FrameLayout android:id="@+id/page"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone">
+
+            <ScrollView android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/content_margin_left"
+                    android:paddingEnd="@dimen/content_margin_left"
+                    android:gravity="center"
+                    style="@style/PageContent">
+
+                    <TextView
+                        android:id="@+id/bootloader_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/PageSummaryText"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="@dimen/summary_margin_bottom"
+                        android:paddingRight="@dimen/location_text_margin_right" />
+
+                    <TextView
+                        android:id="@+id/oemunlock_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/PageSummaryText"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="@dimen/summary_margin_bottom"
+                        android:paddingRight="@dimen/location_text_margin_right" />
+
+                    <Button
+                        android:id="@+id/factory_reset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/location_text_margin_right"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:background="@color/accent"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:text="@string/factory_reset"/>
+
+                </LinearLayout>
+            </ScrollView>
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
