--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -37,4 +37,13 @@
 
     <!-- Toast show on skipping Setupwizard -->
     <string name="skip_setupwizard">Skipping Setupwizard!</string>
+
+    <!-- Welcome: long press Brand Logo
+         No translations because this is shown before locale selection -->
+    <string name="bootloader_unlocked" translatable="false">Bootloader: Unlocked</string>
+    <string name="bootloader_locked" translatable="false">Bootloader: Locked</string>
+    <string name="oemunlock_allowed" translatable="false">OEM Unocking: Allowed</string>
+    <string name="oemunlock_na" translatable="false">OEM Unocking: Not Applicable</string>
+    <string name="oemunlock_notallowed" translatable="false">OEM Unocking: Not Allowed</string>
+    <string name="factory_reset" translatable="false">Factory Reset and Power off</string>
 </resources>
