WelcomeActivity: Optionally show additional details
* Long press of brand logo (CalyxOS logo in the middle)
  shows you
  * Bootloader lock status
  * OEM unlocking toggle status
* It also lets you hit a button to factory reset and power off,
  which does exactly what the name implies

Change-Id: I6ec9ec98dffe1be3e7c516b31fa4612edd079add

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -37,4 +37,12 @@
 
     <!-- Toast show on skipping Setupwizard -->
     <string name="skip_setupwizard">Skipping Setupwizard!</string>
+
+    <!-- Welcome: long press Brand Logo -->
+    <string name="bootloader_unlocked">Bootloader: Unlocked</string>
+    <string name="bootloader_locked">Bootloader: Locked</string>
+    <string name="oemunlock_allowed">OEM Unocking: Allowed</string>
+    <string name="oemunlock_na">OEM Unocking: Not Applicable</string>
+    <string name="oemunlock_notallowed">OEM Unocking: Not Allowed</string>
+    <string name="factory_reset">Factory Reset and Power off</string>
 </resources>
