--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -52,7 +52,15 @@
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/microg_logo" />
 
-                    <include layout="@layout/divider" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="16dp"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/content_margin_right"
+                        android:text="@string/microg_switch_label2"
+                        android:layout_weight="1"
+                        android:textSize="16sp" />
 
                     <LinearLayout
                         android:id="@+id/switchLayout"
@@ -64,13 +72,13 @@
                         android:paddingTop="16dp"
                         android:paddingBottom="16dp"
                         android:paddingLeft="@dimen/content_margin_left"
-                        android:paddingRight="@dimen/data_switch_margin_right">
+                        android:paddingRight="@dimen/content_margin_right">
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="@string/microg_switch_label"
+                            android:text="@string/microg_description"
                             android:textSize="15sp" />
 
                         <Switch
@@ -81,17 +89,41 @@
 
                     </LinearLayout>
 
-                    <include layout="@layout/divider" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="16dp"
                         android:paddingLeft="@dimen/content_margin_left"
                         android:paddingRight="@dimen/content_margin_right"
-                        android:text="@string/microg_warning"
+                        android:text="@string/microg_defaults_switch_label"
                         android:layout_weight="1"
-                        android:textSize="15sp" />
+                        android:textSize="16sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/content_margin_right">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/microg_defaults_summary"
+                            android:textSize="15sp" />
+
+                        <Switch
+                            android:id="@+id/enableDefaults"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true" />
+
+                    </LinearLayout>
 
                     <include layout="@layout/divider" />
 
