--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -91,7 +91,41 @@
 
                     </LinearLayout>
 
-                    <include layout="@layout/divider" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="16dp"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/content_margin_right"
+                        android:text="@string/microg_defaults_summary"
+                        android:layout_weight="1"
+                        android:textSize="15sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/data_switch_margin_right">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/microg_defaults_switch_label"
+                            android:textSize="15sp" />
+
+                        <Switch
+                            android:id="@+id/enableDefaults"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -99,7 +133,7 @@
                         android:paddingTop="16dp"
                         android:paddingLeft="@dimen/content_margin_left"
                         android:paddingRight="@dimen/content_margin_right"
-                        android:text="@string/microg_warning"
+                        android:text="@string/microg_defaults_summary"
                         android:layout_weight="1"
                         android:textSize="15sp" />
 
