Add MicroG defaults checkbox
Change-Id: I4a0d051abc2cc85d2e422545abeef1b047214976

--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -73,6 +73,13 @@
 
                 </LinearLayout>
 
+                <CheckBox
+                    android:id="@+id/enableDefaults"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/microg_checkbox_label"
+                    android:checked="true" />
+
                 <include layout="@layout/divider" />
 
                 <TextView
