--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -91,6 +91,33 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/switchLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp"
+                        android:paddingLeft="@dimen/content_margin_left"
+                        android:paddingRight="@dimen/data_switch_margin_right">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/microg_checkbox_label"
+                            android:textSize="15sp" />
+
+                        <Switch
+                            android:id="@+id/enableDefaults"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true" />
+
+                    </LinearLayout>
+
                     <include layout="@layout/divider" />
 
                     <TextView
