Add MicroG defaults toggle
Issue: calyxos#704
Change-Id: I4a0d051abc2cc85d2e422545abeef1b047214976

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -27,9 +27,11 @@
 
     <!-- MicroG setup -->
     <string name="microg_title">Google Services</string>
-    <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
-    <string name="microg_switch_label">Enable Google Services Compatibility</string>
-    <string name="microg_warning">Note: If you enable this now, your phone will be set up to send data to Google. You can change this later in the microG settings.</string>
+    <string name="microg_description2">microG is a open source replacement for Google Play Services (and related software), but it only includes the useful parts. Unlike Play Services, microG does not have any advertising or location tracking, for example.</string>
+    <string name="microg_switch_label2">Google Services Compatibility</string>
+    <string name="microg_summary">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
+    <string name="microg_defaults_switch_label">Push notification support</string>
+    <string name="microg_defaults_summary">Allow apps to register for push notifications with microG. This registers your device to Google services, without any identifying bits. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
 
     <!-- Toast show on skipping SetupWizard -->
     <string name="skip_setupwizard" translatable="false">Skipping setup wizard</string>
