--- a/res/values-v31/colors.xml
+++ b/res/values-v31/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2013-2015 The CyanogenMod Project
-     Copyright (C) 2017-2020 The LineageOS Project
+     Copyright (C) 2021 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,12 +14,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="skip">Brinca</string>
-    <string name="start">Incumintza</string>
-    <string name="done">Fatu</string>
-    <string name="ok">AB</string>
-    <string name="setup_locale">Limba</string>
-    <string name="no">Nono</string>
-    <string name="yes">Eja</string>
+<resources>
+    <!-- Partner customization -->
+    <color name="sud_dynamic_color_accent_glif_v3_light">@color/accent</color>
 </resources>
