Fix SudFullDynamicColorThemeGlifV3 issues
* Fix light theme colors
* Use material grey instead of pure black for dark theme

Change-Id: I301df4f761c265bca8d9bafa23a29ae2a287d6bc

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,7 +16,7 @@
      limitations under the License.
 -->
 <resources>
-    <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3.DayNight">
+    <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3.Light">
         <item name="sucUsePartnerResource">true</item>
         <item name="sudUsePartnerHeavyTheme">true</item>
     </style>
