SUW: Use eye friendly colors for bootloader status
* From material palette

Change-Id: I0b1991fa019affe0d4af21df726e106ece21ef46

--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -8,4 +8,8 @@
     <color name="accent">?attr/colorAccent</color>
 
     <color name="divider">#40ffffff</color>
+
+    <color name="red">#ff6434</color>
+    <color name="yellow">#ffff52</color>
+    <color name="green">#9cff57</color>
 </resources>
