--- a/res/drawable/calyx_logo_no_text.xml
+++ b/res/drawable/calyx_logo_no_text.xml
@@ -24,7 +24,7 @@
         android:fillColor="#9ACC01"
         android:pathData="M366.82,162.07c-29.23,51.1 -84.28,85.54 -147.37,85.54c-63.09,0 -118.13,-34.44 -147.37,-85.54c29.23,-51.1 84.28,-85.54 147.37,-85.54C282.54,76.53 337.59,110.96 366.82,162.07"/>
     <path
-        android:fillColor="#231F20"
+        android:fillColor="@color/calyx_logo_accent"
         android:pathData="M310.91,255.31l-25.83,-47.5c8.94,-13.01 14.16,-28.76 14.16,-45.74c0,-44.67 -36.21,-80.88 -80.88,-80.88s-80.88,36.21 -80.88,80.88c0,44.67 36.21,80.88 80.88,80.88c16.91,0 32.6,-5.19 45.58,-14.06l46.95,26.43L310.91,255.31z"/>
     <path
         android:fillColor="#9ACC01"
