--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,13 +23,15 @@
     <color name="primary">@color/page_background</color>
     <color name="primary_dark">#c2c5c7</color>
     <color name="accent">@*android:color/accent_device_default_light</color>
-    <color name="lineage_accent">#167C80</color>
+
     <color name="primary_text">#8a000000</color>
     <color name="secondary_text">#42000000</color>
 
     <color name="red">#a30000</color>
     <color name="yellow">#c7a500</color>
     <color name="green">#1faa00</color>
+
+    <color name="calyx_logo_accent">#231F20</color>
 
     <color name="button_bar_text_enabled">#ff1e1e1e</color>
     <color name="button_bar_text_disabled">#321e1e1e</color>
