Fix microg logo colors for dark mode
Change-Id: Icc9785e77eba131b24357d4296db6cf4018277b7

--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -14,4 +14,5 @@
     <color name="green">#9cff57</color>
 
     <color name="calyx_logo_accent">#FFFFFF</color>
+    <color name="microg_logo_accent">#ffffff</color>
 </resources>
