res: strings: Update microg description to reflect latest changes
microG can be enabled within work profile even if it was disabled during
initial user setup

Issue: calyxos#1400
Change-Id: Ia3a4c8554702d1d3ab86f63477df7a11ca8b8648
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -29,7 +29,7 @@
     <string name="microg_title">Google Services</string>
     <string name="microg_description2">microG is a open source replacement for <b>Google Play Services</b> (and related software), but it only includes the useful parts. Unlike Play Services, microG does not have any advertising or location tracking, for example.</string>
     <string name="microg_switch_label2">Google Services Compatibility</string>
-    <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later.</string>
+    <string name="microg_description">This allows apps such as <b>Google Maps, Youtube and ride sharing services</b> to run on CalyxOS. Disable this if you don\'t plan on running apps that require Google services. You will not be able to enable it later, except during work profile setup.</string>
     <string name="microg_defaults_switch_label">Push notification support</string>
     <string name="microg_defaults_summary">Allow apps to register for push notifications with Google. This registers your device to Google services, without any device-specific unique identifiers. This can be enabled later from microG Settings, however any apps setup earlier will need to be re-installed to work properly.</string>
 
