Update microg description to avoid confusion
microG can be enabled within work profile or secondary user
even if it was disabled during initial user setup

Issue: calyxos#1400
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>
Co-Authored-By: Chirayu Desai <chirayudesai1@gmail.com>
Co-Authored-By: Tommy Webb <tommy@calyxinstitute.org>
Change-Id: Ia3a4c8554702d1d3ab86f63477df7a11ca8b8648

--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -73,6 +73,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/enableDescription"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
