MicroGActivity: enableDefaults renamed enablePush
Simple internal rename to avoid confusion.

Change-Id: I466cde83dea0ae38d4d34dea7d00845c3e04e32d

--- a/res/layout/microg_activity.xml
+++ b/res/layout/microg_activity.xml
@@ -98,7 +98,7 @@
                             android:textStyle="bold" />
 
                         <Switch
-                            android:id="@+id/enableDefaults"
+                            android:id="@+id/enablePush"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checked="true" />
