Replace "Setup eSIM" with "Manage SIMs"
Trying to interact with EUICC directly from here has become a mess.
Instead, allow management of all SIMs, which includes adding a new
eSIM or toggling existing SIMs on and off.

Issue: calyxos#2268
Change-Id: Ifbc9e6cf2c4b5be2002a24e06872110761b72bc9

--- a/res/layout/sim_missing_page.xml
+++ b/res/layout/sim_missing_page.xml
@@ -35,11 +35,11 @@
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/setup_euicc"
+                        android:id="@+id/manage_sims"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="@string/setup_euicc"
+                        android:text="@string/manage_sims"
                         style="@style/SudGlifButton.Primary" />
 
                 </LinearLayout>
