--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -27,9 +27,8 @@
     <string name="factory_reset" translatable="false">Factory reset and power off</string>
 
     <!-- eSIM setup -->
-    <string name="euicc_summary">You can also add an eSIM to your device.</string>
     <string name="sim_missing_full_description" translatable="false"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
-    <string name="setup_euicc">Setup eSIM</string>
+    <string name="manage_sims">Manage SIMs</string>
 
     <!-- Bootloader Lock Status -->
     <string name="bootloader_warning_title">Bootloader lock warning</string>
